--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-redux": "~4.4.5",
     "redux": "~3.6.0",
     "reqwest": "~2.0.5",
+    "res": "^0.4.0",
     "usng-tools-js": "git+https://github.com/klassenjs/usng-tools-js.git",
     "uuid": "~2.0.3",
     "webpack": "~1.13.2",
